--- a/editor-hs.cabal
+++ b/editor-hs.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 014bc3c3ca71fa1b4f65ec47a410d6c2b65d36948c0da35653c7895453b2ce78
+-- hash: 973911dbcbb604f6b9e3f52ae605eba81f3adc761ef36d226b41ea0d4f6c5e40
 
 name:           editor-hs
 version:        0.1.0.0
@@ -36,6 +36,8 @@ library
       base >=4.7 && <5
     , containers
     , flow
+    , microlens
+    , microlens-th
     , mtl
     , relude
     , text
@@ -54,6 +56,8 @@ executable editor-hs-exe
     , containers
     , editor-hs
     , flow
+    , microlens
+    , microlens-th
     , mtl
     , relude
     , text
@@ -73,6 +77,8 @@ test-suite editor-hs-test
     , containers
     , editor-hs
     , flow
+    , microlens
+    , microlens-th
     , mtl
     , relude
     , text
