--- a/package.yaml
+++ b/package.yaml
@@ -1,4 +1,4 @@
-name:                editor-hs
+name:                bit
 version:             0.1.0.0
 github:              "sullyj3/editor-hs"
 license:             BSD3
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/sullyj3/editor-hs#readme>
+description:         Please see the README on GitHub at <https://github.com/sullyj3/bit#readme>
 
 dependencies:
 - relude
@@ -33,7 +33,7 @@ library:
   source-dirs: src
 
 executables:
-  editor-hs-exe:
+  bit:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -41,10 +41,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - editor-hs
+    - bit
 
 tests:
-  editor-hs-test:
+  bit-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -52,4 +52,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - editor-hs
+    - bit
