--- a/bit.cabal
+++ b/bit.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 6dbba9bfafe46539520f6700772cdc623a4dad182c12427a48c5935e56210e9d
+-- hash: 70bf2821bff584ad0e5aa888538e36673a6cca6722b13f7a47d85ad649df3843
 
 name:           bit
 version:        0.1.0.0
@@ -39,7 +39,9 @@ library
     , flow
     , microlens-platform
     , mtl
+    , nonempty-containers
     , relude
+    , safe
     , text
     , vty
   default-language: Haskell2010
@@ -61,7 +63,9 @@ executable bit
     , flow
     , microlens-platform
     , mtl
+    , nonempty-containers
     , relude
+    , safe
     , text
     , vty
   default-language: Haskell2010
@@ -81,7 +85,9 @@ test-suite bit-test
     , flow
     , microlens-platform
     , mtl
+    , nonempty-containers
     , relude
+    , safe
     , text
     , vty
   default-language: Haskell2010
